<resources>
    <string name="app_name">Lab8</string>
    <string name="to_do_list">To-Do List</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="task_description">Task Description</string>
    <string name="priority_title">Priority</string>
    <string name="add_task">Add Task</string>
    <string name="fab_add">Add</string>
</resources>