<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/contet_task"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:hint="@string/task_description"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_title"
            android:textSize="24sp"
            android:layout_margin="10dp"
            />

        <RadioGroup
            android:id="@+id/priority_group"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/low_priority"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:checked="true"
                android:background="@android:color/holo_green_light"
                android:text="@string/low_priority" />

            <RadioButton
                android:id="@+id/medium_priority"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/medium_priority" />

            <RadioButton
                android:id="@+id/high_priority"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/high_priority" />

        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="36dp"

        android:text="@string/add_task"/>


</LinearLayout>